<resources>
    <string name="app_name">ExpenseTracker</string>
    <string-array name="categories">
        <item>Food</item>
        <item>Transport</item>
        <item>Housing</item>
        <item>Entertainment</item>
        <item>Utilities</item>
        <item>Healthcare</item>
        <item>Other</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="set_budget">Set Budget</string>
    <string name="data_backup">Data Backup</string>
    <string name="export_to_file">Export your transaction data to a file</string>
    <string name="export_as_json">Export as JSON</string>
    <string name="export_as_text">Export as Text</string>
    <string name="available_backups">Available Backups</string>
    <string name="no_backups_available">No backups available</string>
    <string name="total_balance">Total Balance</string>
    <string name="tot_bal_val">Rs3000</string>
    <string name="budget_val">Rs400</string>
    <string name="budget">Budget</string>
    <string name="expense_val">Rs400</string>
    <string name="expense">Expense</string>
    <string name="currency_settings_title">Currency Settings</string>
    <string name="select_currency">Select your preferred currency</string>
    <string name="select_currency_type">Select Currency</string>
    <string name="budget_status">Budget Status</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="one_transac_val">Rs12</string>
    <string name="transac_del">Delete</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="close">Close</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="transactions">Transactions</string>
    <string name="add_expense">Add Expense</string>
</resources>